--- a/index.html
+++ b/index.html
@@ -4,8 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="./css/style.css" />
+    <script defer src="./js/index.js"></script>
   </head>
   <body>
-    <h1><a href="./html/sub.html">sub page</a></h1>
+    <header></header>
+    <main>
+      <aside></aside>
+      <article></article>
+    </main>
+    <footer>http://seheeejeong.github.io/Github-deploy-test</footer>
   </body>
 </html>
