--- a/index.html
+++ b/index.html
@@ -10,7 +10,13 @@
   <body>
     <header></header>
     <main>
-      <aside></aside>
+      <aside>
+        <ul>
+          <li>HOME</li>
+          <li>ABOUT</li>
+          <li>COMMUNITY</li>
+        </ul>
+      </aside>
       <article></article>
     </main>
     <footer>http://seheeejeong.github.io/Github-deploy-test</footer>
